samples/_failures_safe/1761549047_5ebd42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b76ce1aa.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
